# ncm2mp3

./: .gitignore  README.md  main.py  main.spec  ncm2mp3.py  ncm2mp3.spec  pyproject.toml
licensing/: README.md  __init__.py  activation_dialog.py  generate_keys.py  public_key.pem  server_license.py
tests/: test_main.py  test_ncm2mp3.py
